test/corpus/foo3.txt
==================
foo3
==================

var i32 @g = 10
var i32 @nonce = 1

fun i32 @foo (i32, i32) {
init:
  bid: b0
  allocations: 


block b0:
  %b0:p0:i32:i
  %b0:p1:i32:j
  %b0:i0:i32 = add %b0:p0:i32 %b0:p1:i32
  %b0:i1:i32 = load @nonce:i32*
  %b0:i2:i32 = add %b0:i0:i32 %b0:i1:i32
  ret %b0:i2:i32
}

fun i32 @main () {
init:
  bid: b0
  allocations: 


block b0:
  %b0:i0:i32 = load @g:i32*
  %b0:i1:i32 = call @foo:[ret:i32 params:(i32, i32)]*(%b0:i0:i32, %b0:i0:i32)
  ret %b0:i1:i32
}

---

(source_file
  (global_variable
    (type
      (sigined_integer_type))
    (at_identifier)
    (ast_integer))
  (global_variable
    (type
      (sigined_integer_type))
    (at_identifier)
    (ast_integer))
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier)
      (function_param_types
        (type
          (sigined_integer_type))
        (type
          (sigined_integer_type))))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (phi_node
          (phi_id)
          (type
            (sigined_integer_type))
          (identifier))
        (phi_node
          (phi_id)
          (type
            (sigined_integer_type))
          (identifier))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (load
            (operand
              (constant_operand
                (constant
                  (at_identifier))
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (exit
          (return
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type)))))))))
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (load
            (operand
              (constant_operand
                (constant
                  (at_identifier))
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (call
            (operand
              (constant_operand
                (constant
                  (at_identifier))
                (type
                  (pointer_type
                    (type
                      (function_type
                        (type
                          (sigined_integer_type))
                        (function_param_types
                          (type
                            (sigined_integer_type))
                          (type
                            (sigined_integer_type)))))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (exit
          (return
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))))))
