test/corpus/gvn.input.txt
==================
global variable numbering input
==================

fun unit @sink (i32) {
init:
  bid: b0
  allocations:

block b0:
  %b0:p0:i32
  ret unit:unit
}

fun i32 @gvn (i32) {
init:
  bid: b0
  allocations:

block b0:
  %b0:p0:i32:a
  %b0:i0:i32:b = add %b0:p0:i32 1:i32
  br undef:i1, b1(), b2()

block b1:
  %b1:i0:i32:b = add %b0:p0:i32 1:i32
  %b1:i1:i32:c = add %b1:i0:i32 2:i32

  %b1:i2:unit = call @sink:[ret:unit params:(i32)]*(%b1:i0:i32)

  j b3()

block b2:
  %b2:i0:i32:c = add %b0:i0:i32 2:i32

  %b2:i1:unit = call @sink:[ret:unit params:(i32)]*(%b2:i0:i32)

  j b3()

block b3:
  %b3:i0:i32:b = add %b0:p0:i32 1:i32
  %b3:i1:i32:c = add %b3:i0:i32 2:i32

  %b3:i2:unit = call @sink:[ret:unit params:(i32)]*(%b3:i0:i32)
  %b3:i3:unit = call @sink:[ret:unit params:(i32)]*(%b3:i1:i32)

  ret 0:i32
}

---

(source_file
  (function_definition
    (function_signature
      (type)
      (at_identifier)
      (function_param_types
        (type
          (sigined_integer_type))))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (phi_node
          (phi_id)
          (type
            (sigined_integer_type)))
        (exit
          (return
            (operand
              (constant_operand
                (constant)
                (type))))))))
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier)
      (function_param_types
        (type
          (sigined_integer_type))))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (phi_node
          (phi_id)
          (type
            (sigined_integer_type))
          (identifier))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (identifier)
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (exit
          (conditional_branch
            (operand
              (constant_operand
                (constant)
                (type
                  (sigined_integer_type))))
            (block_id)
            (block_id))))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (identifier)
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (identifier)
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type)
          (call
            (operand
              (constant_operand
                (constant
                  (at_identifier))
                (type
                  (pointer_type
                    (type
                      (function_type
                        (type)
                        (function_param_types
                          (type
                            (sigined_integer_type)))))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (exit
          (jump
            (block_id))))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (identifier)
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type)
          (call
            (operand
              (constant_operand
                (constant
                  (at_identifier))
                (type
                  (pointer_type
                    (type
                      (function_type
                        (type)
                        (function_param_types
                          (type
                            (sigined_integer_type)))))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (exit
          (jump
            (block_id))))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (identifier)
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (identifier)
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type)
          (call
            (operand
              (constant_operand
                (constant
                  (at_identifier))
                (type
                  (pointer_type
                    (type
                      (function_type
                        (type)
                        (function_param_types
                          (type
                            (sigined_integer_type)))))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type)
          (call
            (operand
              (constant_operand
                (constant
                  (at_identifier))
                (type
                  (pointer_type
                    (type
                      (function_type
                        (type)
                        (function_param_types
                          (type
                            (sigined_integer_type)))))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))))))
